# oop-in-cpp

./: CMakeLists.txt  FUNDING.yml  README.md
00 - Introduction/: README.md
01 - Abstraction/: README.md
01 - Encapsulation/: Encapsulation.md  README.md
01_abstraction/: README.md
02 - Encapsulation/: README.md
02 - Inheritance/: Inheritance.md  README.md
02_encapsulation/: README.md
03 - Inheritance/: README.md
03 - Polymorphism/: README.md
03_inheritance/: README.md
04 - Abstraction/: Abstraction.md  README.md
04 - Polymorphism/: README.md
04_polymorphism/: README.md
05_modern_cpp/: README.md
06_best_practices/: README.md
Versión en español/01 - Abstracción/: README.md
Versión en español/02 - Encapsulation/: README.md
Versión en español/03 - Inheritance/: README.md
Versión en español/04 - Polymorphism/: README.md
examples/: CMakeLists.txt  README.md
examples/01-abstraction/: 01_basic_class.cpp  02_attributes_and_methods.cpp  03_abstract_classes.cpp
examples/02-encapsulation/: 01_bank_account.cpp  02_access_modifiers.cpp
examples/03-inheritance/: 01_basic_inheritance.cpp  02_virtual_functions.cpp  03_abstract_classes.cpp
examples/04-polymorphism/: 01_animal_example.cpp  02_payment_processors.cpp  03_vtable_explanation.cpp
scripts/: build.sh  compile.sh
